--- a/localisation_synced/sgm_synced_l_simp_chinese.yml
+++ b/localisation_synced/sgm_synced_l_simp_chinese.yml
@@ -1,2 +1,81 @@
 ﻿l_simp_chinese:
   gm_country_synced: "遊戲主持者"
+  gm_global_country: "gm_global_country"
+  sgm_terminal_event_target_1: "sgm_terminal_event_target_1"
+  sgm_terminal_event_target_2: "sgm_terminal_event_target_2"
+  sgm_terminal_event_target_3: "sgm_terminal_event_target_3"
+  sgm_terminal_event_target_4: "sgm_terminal_event_target_4"
+  sgm_terminal_event_target_5: "sgm_terminal_event_target_5"
+  target:  "target"  
+  orbit:  "orbit"  
+  planet:  "planet"  
+  star:  "star"  
+  branch_office_owner:  "branch_office_owner"  
+  pop:  "pop"  
+  species:  "species"  
+  assembling_species:  "assembling_species"  
+  built_species:  "built_species"  
+  declining_species:  "declining_species"  
+  fleet:  "fleet"  
+  from:  "from"  
+  this:  "this"  
+  root:  "root"  
+  prev:  "prev"  
+  capital_scope:  "capital_scope"  
+  owner:  "owner"  
+  controller:  "controller"  
+  fromfrom:  "fromfrom"  
+  prevprev:  "prevprev"  
+  prevprevprev:  "prevprevprev"  
+  prevprevprevprev:  "prevprevprevprev"  
+  home_planet:  "home_planet"  
+  last_created_fleet:  "last_created_fleet"  
+  owner_main_species:  "owner_main_species"  
+  last_created_country:  "last_created_country"  
+  last_created_species:  "last_created_species"  
+  alliance:  "alliance"  
+  overlord:  "overlord"  
+  federation:  "federation"  
+  research_station:  "research_station"  
+  mining_station:  "mining_station"  
+  last_created_pop:  "last_created_pop"  
+  last_created_system:  "last_created_system"  
+  planet_owner:  "planet_owner"  
+  last_created_ambient_object:  "last_created_ambient_object"  
+  last_created_ship:  "last_created_ship"  
+  orbital_station:  "orbital_station"  
+  last_created_leader:  "last_created_leader"  
+  owner_species:  "owner_species"  
+  fromfromfrom:  "fromfromfrom"  
+  last_created_army:  "last_created_army"  
+  envoy_location_country:  "envoy_location_country"  
+  contact_country:  "contact_country"  
+  sector_capital:  "sector_capital"  
+  observation_outpost_owner:  "observation_outpost_owner"  
+  observation_outpost:  "observation_outpost"  
+  federation_leader:  "federation_leader"  
+  associated_federation:  "associated_federation"  
+  sector:  "sector"  
+  pop_faction:  "pop_faction"  
+  last_created_pop_faction:  "last_created_pop_faction"  
+  unhappiest_pop:  "unhappiest_pop"  
+  heir:  "heir"  
+  fromfromfromfrom:  "fromfromfromfrom"  
+  last_refugee_country:  "last_refugee_country"  
+  starbase:  "starbase"  
+  capital_star:  "capital_star"  
+  system_star:  "system_star"  
+  no_scope:  "no_scope"  
+  archaeological_site:  "archaeological_site"  
+  excavator_fleet:  "excavator_fleet"  
+  reverse_first_contact:  "reverse_first_contact"  
+  spynetwork:  "spynetwork"  
+  growing_species:  "growing_species"  
+  galactic_emperor:  "galactic_emperor"  
+  galactic_custodian:  "galactic_custodian"  
+  attacker:  "attacker"  
+  defender:  "defender"  
+  leader:  "leader"  
+  solar_system:  "solar_system"  
+  space_owner:  "space_owner"  
+  ruler:  "ruler"
